corrected alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,8 +69,8 @@ h1{
     padding: 10px;
 }
 .middleLine {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 80px;
+    margin-right: 80px;
 }
 .bottomLine {
     padding: 5px 10px 10px 10px;
@@ -276,7 +276,6 @@ nav ul li a:hover {
     align-items: center;
     animation: scroll 10s linear infinite;
 }
-
 .homepageCarousel img {
     max-width: 100vw;
 }
@@ -325,12 +324,27 @@ nav ul li a:hover {
     display: flex;
     padding: 1px;
   }
-  @media screen and (min-width: 900px){
-    .row1, .row2, .row3, .row4 {
-        padding-left: 30px;
-        padding-right: 30px;
-    }
+
+  .product1-container {
+    padding: 0;
+    justify-content: center;
+    z-index: 100;
   }
+  .product1-container h1 {
+    font-size: larger;
+    text-align: start;
+    margin-bottom: 20px;
+  }
+
+  .product1-container p {
+    line-height: 1.5;
+  }
+  .product1-container h1,
+  .product1-container p {
+    margin-left: 665px;
+    /*color: rgba(254, 254, 255, 1);*/
+  }
+
 
   .col-1 {
     margin-bottom: none;
@@ -344,8 +358,11 @@ nav ul li a:hover {
     z-index: -1;
     background: rgba(20, 47, 204, 0.95);
   }
-  .col-1, .color-box1, .col-2, .color-box2 {
-    margin-top: 30px;
+  .col-1,
+  .color-box1,
+  .col-2,
+  .color-box2 {
+    margin-top: 20px;
     border: none;
   }
   .col-2 {
@@ -490,7 +507,7 @@ nav ul li a:hover {
     padding: none;
     border: none;
     width: 100%;
-    height: 500px;
+    height: 600px;
     top: 750px;
     z-index: -1;
 }
@@ -503,8 +520,8 @@ nav ul li a:hover {
     -ms-transform: translate(-50%, -50%);
     background-color:  rgba(254, 254, 255, 1);
     border-color: rgba(20, 47, 204, 0.95);
-    border-style: solid;
     color: rgba(20, 47, 204, 0.95);
+    border-style: solid;
     font-size: 20px;
     font-weight: 700;
     padding: 16px 30px;
@@ -520,36 +537,47 @@ nav ul li a:hover {
     border: 2px solid rgba(249, 114, 38, 0.8);
   }
 
-  .productText p {
+  .productText-container {
     position: absolute;
-    color: rgba(254, 254, 255, 1);
-    margin-left: 160px;
     top: 800px;
-    padding: 0;
+  }
+
+  .productText {
+    float: left;
+    margin-right: 250px;
+    margin-left: 180px;
+    margin-top: 50px;
+  }
+
+  .productText p {
+    color: rgba(254, 254, 255, 1);
     line-height: 25px;
     font-weight: 50;
     font-size: 16px;
   }
+
+  .productTextIcons {
+    float: right;
+    margin-top: 70px;
+  }
+  
   .ingameIMGs {
-    position: absolute;
-    top: 980px;
-    margin-left: 165px;
-    padding-bottom: 100px;
+    position: relative;
+    margin-left: 175px;
   }
-  .includesIcons {
-    position: absolute;
-    top: 1300px;
-    margin-left: 400px;
-    padding-bottom: 30px;
-    z-index: 20;
+
+  .gamingIcons {
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    margin-left: 360px;
   }
+
   .seperationLine {
     position: relative;
-    margin-top: 80px;
-    margin-bottom: 80px;
     margin-left: 80px;
     margin-right: 80px;
-}
+  }
   /*------------------------------------------*/
 
 
@@ -588,10 +616,10 @@ nav ul li a:hover {
     width: 245px;
     height: 40px;
     border-radius: 8px;
-    margin-top: 60px;
+    margin-top: 10px;
     border: solid rgba(20, 47, 204, 1);
     background-color: rgba(254, 254, 255, 1);
-    transition: 0.3s;
+    transition: 0.5s;
 }
 #searchGames::placeholder {
     text-align: center;
@@ -601,136 +629,18 @@ input#searchGames {
 }
 input#searchGames:hover {
     margin-left: 340px;
-}
-
-/*media screens for searchGames*/
-@media screen and (max-width: 375px) {
-    #searchGames {
-        margin-left: 16%;
-    }
-    #searchGames:hover {
-        width: 300px;
-        border: 1px solid rgba(249, 114, 38, 0.8);
-    }
-}
-@media screen and (min-width: 1480px) {
-    #searchGames {
-        margin-left: 42%;
-    }
-    #searchGames:hover {
-        width: 300px;
-        border: 1px solid rgba(249, 114, 38, 0.8);
-    }
-}
-    #searchGames:hover {
-        width: 300px;
-    }
-#searchGames:hover,
-#searchGames:focus {
+    width: 300px;
     border: 1px solid rgba(249, 114, 38, 0.8);
-    background-color: rgba(248, 248, 255, 1);
-  }
+}
   
 #gamingNav {
     width: 100%;
     z-index: 1;
     position: relative;
     text-align: center;
-    padding-top: 40px;
+    margin-top: 60px;
+    margin-bottom: 30px;
     transition: all 1s;
-}
-/*media screens for gamingNav*/
-@media screen and (max-width: 900px) {
-    #gamingNav {
-        padding-top: 40px;
-        margin-left: 6px;
-    }
-}
-@media screen and (min-width: 1480px) {
-    #gamingNav {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto;
-        padding-top: 40px;
-    }
-}
-
-#product1-img {
-    z-index: 1;
-    margin-left: 220px;
-}
-#product2-img {
-    z-index: 2;
-}
-#product3-img {
-    z-index: 3;
-}
-#product4-img {
-    z-index: 4;
-}
-#product5-img {
-    z-index: 5;
-    margin-left: 220px;
-}
-#product6-img {
-    z-index: 6;
-}
-#product7-img {
-    z-index: 7;
-}
-#product8-img {
-    z-index: 8;
-}
-#product9-img {
-    z-index: 9;
-    margin-left: 220px;
-}
-#product10-img {
-    z-index: 10;
-}
-#product11-img {
-    z-index: 11;
-}
-#product12-img {
-    z-index: 12;
-}
-#product13-img {
-    z-index: 13;
-    margin-left: 220px;
-}
-#product14-img {
-    z-index: 14;
-}
-#product15-img {
-    z-index: 15;
-}
-#product16-img {
-    z-index: 16;
-}
-/*media screens for products(int)*/
-@media screen and (max-width: 900px) {
-    #product1-img {
-        margin-left: 20px;
-    }
-    #product5-img {
-        z-index: 5;
-        margin-left: 20px;
-    }
-    .product-wrapper {
-        padding-top: 40px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 20px;
-    }
-}
-/*DO SOMETHING WITH MEDIA QUERY??? ----------------------*/
-@media screen and (min-width: 1480px){
-    .product-wrapper {
-        padding-top: 40px;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        column-gap: 20px;
-    }
 }
 
 #product1-img,
@@ -750,20 +660,26 @@ input#searchGames:hover {
 #product15-img,
 #product16-img {
     display: inline-table;
-    margin-left: 25px;
-    padding-top: 50px;
-    transition: all 1s;
+    margin-left: 35px;
+    margin-top: 50px;
 }
+
 #product1-img,
-#product4-img,
+#product2-img,
+#product3-img,
 #product5-img,
-#product8-img,
+#product6-img,
+#product7-img,
 #product9-img,
-#product12-img,
-#product13-img, 
-#product16-img {
-    padding-right: 50px;
+#product10-img,
+#product11-img,
+#product13-img,
+#product14-img,
+#product15-img {
+    margin-right: 61px;
 }
+
+
 /*media screens for product-imgs*/
 @media screen and (max-width: 900px) {
     #product1-img,
@@ -810,7 +726,7 @@ input#searchGames:hover {
 
 #expandBTN {
     position: relative;
-    margin-left: 440px;
+    margin-left: 455px;
     background-color: rgba(254, 254, 255, 1);
     border: none;
     cursor: pointer;
